--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,3 +1,11 @@
+#my-menu a{
+	padding: 2%;
+}
+
+/*.ui.fitted.menu .item, .ui.fitted.menu .item .menu .item, .ui.menu .fitted.item{*/
+	/*padding: 2em;*/
+/*}*/
+
 .ui.top.menu .ui.container {
 	padding-right: 12%; 
 }
@@ -11,14 +19,8 @@
 	padding: 3% 0 3% 0;
 }
 
-/*#menu {*/
-	/*display: none;*/
-/*}*/
+
 li{
 	padding-top: 0.5%;
 	padding-bottom: 0.5%;
-}
-
-.ui.fitted.menu .item, .ui.fitted.menu .item .menu .item, .ui.menu .fitted.item{
-	padding: 2%;
 }
