--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -171,7 +171,8 @@ h2 {
 .paper-title {
     font-size: 16px;
     font-weight: 600;
-    margin-bottom: 4px;
+    margin-bottom: 2px;
+    line-height: 1.3;
 }
 
 .paper-title a {
@@ -186,13 +187,16 @@ h2 {
 .paper-authors {
     font-size: 13px;
     color: #555;
-    margin-bottom: 3px;
+    margin-bottom: 0px;
+    line-height: 1.4;
 }
 
 .paper-venue {
     font-size: 13px;
     color: #666;
-    margin-bottom: 6px;
+    margin-bottom: 1px;
+    line-height: 1.4;
+    font-style: italic;
 }
 
 .award {
@@ -204,7 +208,7 @@ h2 {
     display: flex;
     flex-wrap: wrap;
     gap: 6px;
-    margin-top: 4px;
+    margin-top: 1px;
 }
 
 .paper-links img {
